--- a/scss/elements/_topImgParalaxBlock.scss
+++ b/scss/elements/_topImgParalaxBlock.scss
@@ -8,7 +8,7 @@
     border-bottom: 1px solid rgba(255, 255, 255, .3);
     overflow: hidden;
     & > img {
-        width: 100%;
+        min-width: 100%;
         min-height: 100%;
     }
 }
