--- a/scss/elements/series/_series.scss
+++ b/scss/elements/series/_series.scss
@@ -8,7 +8,7 @@
         display: flex;
         flex-direction: column;
         font-weight: 700;
-        padding-top: 50px;
+        padding-top: 0px;
         text-shadow: 0 0 50px rgba(0, 0, 0, .55);
         margin-bottom: 20px;
         & > span {
@@ -22,12 +22,14 @@
         position: relative;
         z-index: 2;
         width: 100%;
+        margin-bottom: 20px;
+        transition: .4s;
         &__block {
             max-height: 1000px;
             padding: 20px 23px;
             overflow: hidden;
             border-radius: 20px;
-            transition: .2s;
+            transition: .4s;
             @include base.style-main_base;
             & > h3 {
                 font-size: 24px;
@@ -65,13 +67,24 @@
                 @include base.style-main_click;
             }
         }
+        &_hidden {
+            margin-bottom: 50px;
+        }
         &_hidden &{
             &__block {
-                max-height: 300px;
+                max-height: 150px;
             }
             &__buttonBlock {
                 margin-top: -60px;
             }
+        }
+    }
+    &__games {
+        &__head {
+            margin-bottom: 20px;
+        }
+        &__grid {
+            @include base.grid(35px, 3);
         }
     }
 }
