--- a/css/main.css
+++ b/css/main.css
@@ -1708,14 +1708,18 @@ label {
   position: relative;
   padding: 12px 16px 12px 16px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
   border-radius: 23px;
   background-color: rgba(255, 255, 255, 0.05);
+  transition: 0.2s;
   background-color: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.15);
   box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
   transition: 0.2s;
   cursor: pointer;
-  transition: 0.2s;
 }
 .switch__head__point:hover {
   background-color: rgba(1, 162, 255, 0.25);
@@ -1728,6 +1732,11 @@ label {
   font-size: 16px;
   font-weight: 600;
   cursor: pointer;
+}
+.switch__head__point > span {
+  font-size: 14px;
+  cursor: pointer;
+  transform: translateY(1px);
 }
 .switch__head__point_active {
   background-color: rgba(1, 162, 255, 0.4);
@@ -2843,8 +2852,16 @@ label {
   transform: translateY(5px);
 }
 .mainInfo__interaction__prices__new {
+  display: flex;
+  align-items: end;
+  gap: 5px;
   font-weight: 700;
   font-size: 28px;
+}
+.mainInfo__interaction__prices__new > span {
+  transform: translateY(-3px);
+  font-size: 20px;
+  color: rgb(200, 200, 200);
 }
 .mainInfo__interaction__discount {
   font-size: 20px;
@@ -4044,56 +4061,9 @@ label {
   z-index: 3;
   margin: auto;
   width: 100%;
-  margin-top: 50px;
-}
-.similar > h3 {
-  font-size: 24px;
-  font-weight: 600;
-  text-align: center;
-  margin-bottom: 25px;
-}
-.similar__header {
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  margin-bottom: 20px;
-  gap: 10px;
-}
-.similar__header__nav {
-  position: relative;
-  padding: 12px 16px 12px 16px;
-  cursor: pointer;
-  border-radius: 23px;
-  background-color: rgba(255, 255, 255, 0.05);
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
-  transition: 0.2s;
-  cursor: pointer;
-  transition: 0.2s;
-}
-.similar__header__nav:hover {
-  background-color: rgba(1, 162, 255, 0.25);
-  border: 1px solid rgba(1, 162, 255, 0.6);
-}
-.similar__header__nav:active {
-  transform: scale(0.95);
-}
-.similar__header__nav__text {
-  font-size: 16px;
-  font-weight: 600;
-  cursor: pointer;
-}
-.similar__header__nav_active {
-  background-color: rgba(1, 162, 255, 0.4);
-  border: 1px solid rgb(1, 162, 255);
-}
-.similar__header__nav_active:hover {
-  background-color: rgba(1, 162, 255, 0.4);
-  border: 1px solid rgb(1, 162, 255);
-}
-.similar__header__nav:active {
-  transform: scale(0.95);
+  margin-top: 30px;
+  padding-top: 20px;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 .similar__grid {
   display: none;
@@ -4665,20 +4635,22 @@ label {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  gap: 50px;
+  gap: 20px;
 }
 .settings__left {
   display: flex;
   gap: 20px;
   width: 100%;
+  flex-grow: 1;
 }
 .settings__right {
   display: flex;
   align-items: end;
   justify-content: end;
+  flex-shrink: 0;
 }
 .settings__conf {
-  width: 50%;
+  width: 100%;
 }
 .settings__conf > label {
   display: flex;
@@ -4811,9 +4783,10 @@ label {
 .settings__buttons {
   display: flex;
   gap: 10px;
+  flex-shrink: 0;
 }
 .settings__buttons__button {
-  font-size: 18px;
+  font-size: 16px;
   height: 50px;
   padding-left: 15px;
   padding-right: 15px;
@@ -6308,6 +6281,7 @@ label {
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   font-size: 20px;
+  transition: 0.2s;
   background-color: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.15);
   box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
@@ -6321,14 +6295,26 @@ label {
 .series__about__buttonBlock > button:active {
   transform: scale(0.95);
 }
+.series__about__buttonBlock > button > svg {
+  transition: 0.2s;
+  transform: rotate(270deg);
+}
 .series__about_hidden {
   margin-bottom: 50px;
 }
 .series__about_hidden .series__about__block {
   max-height: 150px;
+  box-shadow: 0 0 0 transparent;
+  color: rgb(180, 180, 180);
 }
 .series__about_hidden .series__about__buttonBlock {
-  margin-top: -60px;
+  margin-top: -70px;
+}
+.series__about_hidden .series__about__buttonBlock > button {
+  transform: translateY(30px);
+}
+.series__about_hidden .series__about__buttonBlock > button > svg {
+  transform: rotate(90deg);
 }
 .series__games__head {
   margin-bottom: 20px;
@@ -6354,7 +6340,6 @@ label {
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   display: flex;
   align-items: center;
-  justify-content: space-between;
   padding: 30px;
 }
 .author__top__head__left {
@@ -6384,14 +6369,6 @@ label {
 .author__top__head__left__title > h2 {
   font-size: 72px;
   font-weight: 700;
-}
-.author__top__head__right {
-  display: flex;
-  align-items: center;
-  justify-content: end;
-}
-.author__top__head__right__count {
-  font-size: 24px;
 }
 .author__top__about {
   padding: 30px;
