--- a/scss/elements/_switch.scss
+++ b/scss/elements/_switch.scss
@@ -11,14 +11,23 @@
             position: relative;
             padding: 12px 16px 12px 16px;
             cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 10px;
             border-radius: 23px;
             background-color: rgba(255, 255, 255, .05);
-            @include base.style-main_click;
             transition: .2s;
+            @include base.style-main_click;
             &__text {
                 font-size: 16px;
                 font-weight: 600;
                 cursor: pointer;
+            }
+            & > span {
+                font-size: 14px;
+                cursor: pointer;
+                transform: translateY(1px);
             }
             &_active {
                 @include base.style-main_active;
