--- a/scss/elements/game_card/_mainInfo.scss
+++ b/scss/elements/game_card/_mainInfo.scss
@@ -70,8 +70,16 @@
                 transform: translateY(5px);
             }
             &__new {
+                display: flex;
+                align-items: end;
+                gap: 5px;
                 font-weight: 700;
                 font-size: 28px;
+                & > span {
+                    transform: translateY(-3px);
+                    font-size: 20px;
+                    color: rgb(200, 200, 200);
+                }
             }
         }
         &__discount {
@@ -418,9 +426,6 @@
             border: none;
         }
         &_fullscreen &{
-            // &__visual {
-
-            // }
             &__interface {
                 pointer-events: none;
                 &__top {
