--- a/scss/elements/game_card/_similar.scss
+++ b/scss/elements/game_card/_similar.scss
@@ -5,43 +5,9 @@
     z-index: 3;
     margin: auto;
     width: 100%;
-    margin-top: 50px;
-    & > h3 {
-        font-size: 24px;
-        font-weight: 600;
-        text-align: center;
-        margin-bottom: 25px;
-    }
-    &__header {
-        display: flex;
-        align-items: center;
-        justify-content: start;
-        margin-bottom: 20px;
-        gap: 10px;
-        &__nav {
-            position: relative;
-            padding: 12px 16px 12px 16px;
-            cursor: pointer;
-            border-radius: 23px;
-            background-color: rgba(255, 255, 255, .05);
-            @include base.style-main_click;
-            transition: .2s;
-            &__text {
-                font-size: 16px;
-                font-weight: 600;
-                cursor: pointer;
-            }
-            &_active {
-                @include base.style-main_active;
-                &:hover {
-                    @include base.style-main_active;
-                }
-            }
-            &:active {
-                transform: scale(.95);
-            }
-        }
-    }
+    margin-top: 30px;
+    padding-top: 20px;
+    border-top: 1px solid rgba(255, 255, 255, .2);
     &__grid {
         display: none;
         grid-gap: 35px;
