--- a/scss/elements/profile/_settings.scss
+++ b/scss/elements/profile/_settings.scss
@@ -8,20 +8,22 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
-        gap: 50px;
+        gap: 20px;
     }
     &__left {
         display: flex;
         gap: 20px;
         width: 100%;
+        flex-grow: 1;
     }
     &__right {
         display: flex;
         align-items: end;
         justify-content: end;
+        flex-shrink: 0;
     }
     &__conf {
-        width: 50%;
+        width: 100%;
         & > label {
             display: flex;
             align-items: center;
@@ -158,8 +160,9 @@
     &__buttons {
         display: flex;
         gap: 10px;
+        flex-shrink: 0;
         &__button {
-            font-size: 18px;
+            font-size: 16px;
             height: 50px;
             padding-left: 15px;
             padding-right: 15px;
