--- a/scss/elements/series/_series.scss
+++ b/scss/elements/series/_series.scss
@@ -64,7 +64,12 @@
                 -webkit-backdrop-filter: blur(10px);
                 backdrop-filter: blur(10px);
                 font-size: 20px;
+                transition: .2s;
                 @include base.style-main_click;
+                & > svg {
+                    transition: .2s;
+                    transform: rotate(270deg);
+                }
             }
         }
         &_hidden {
@@ -73,9 +78,18 @@
         &_hidden &{
             &__block {
                 max-height: 150px;
+                box-shadow: 0 0 0 transparent;
+                color: rgb(180, 180, 180);
+                // opacity: .8;
             }
             &__buttonBlock {
-                margin-top: -60px;
+                margin-top: -70px;
+                & > button {
+                    transform: translateY(30px);
+                    & > svg {
+                        transform: rotate(90deg);
+                    }
+                }
             }
         }
     }
