--- a/css/main.css
+++ b/css/main.css
@@ -3313,69 +3313,27 @@ label {
   border-radius: 13px;
   overflow-y: auto;
   width: 100%;
-  transition: 0.1s;
+  transition: 0.2s;
   scroll-behavior: smooth;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
 }
 .mainInfo__info__category::-webkit-scrollbar {
   width: 0;
   height: 0;
 }
-.mainInfo__info__category__nav {
-  background-color: rgba(0, 0, 0, 0.2);
-  position: relative;
-  z-index: 2;
-  border-radius: 7px;
-  height: 36px;
-  width: 36px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid rgba(255, 255, 255, 0);
-  transition: 0.15s;
-  cursor: pointer;
-}
-.mainInfo__info__category__nav img {
-  width: 24px;
-  filter: invert(1);
-}
-.mainInfo__info__category__nav__forHover {
-  visibility: hidden;
-  position: absolute;
-  left: -100px;
-  right: -100px;
-  top: 42px;
-  display: flex;
-  justify-content: center;
-  opacity: 0;
-  transition: 0.15s;
-}
-.mainInfo__info__category__nav__forHover__text {
-  border-radius: 7px;
-  background-color: rgb(67, 67, 67);
-  padding: 5px;
-  border: 2px solid rgba(255, 255, 255, 0.2);
-  font-size: 14px;
-  font-weight: 300;
-}
-.mainInfo__info__category__nav:hover .mainInfo__info__category__nav__forHover {
-  opacity: 1;
-  visibility: visible;
-}
-.mainInfo__info__category__nav:hover {
-  z-index: 5;
-  border: 2px solid rgba(255, 255, 255, 0.2);
-}
 .mainInfo__info__category__point {
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
-  transition: 0.2s;
-  cursor: pointer;
   border-radius: 13px;
   padding: 3px 10px;
   font-size: 13px;
   text-align: center;
   cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  transition: 0.2s;
+  cursor: pointer;
+  box-shadow: 0 0 0 0 transparent;
 }
 .mainInfo__info__category__point:hover {
   background-color: rgba(1, 162, 255, 0.25);
@@ -3387,6 +3345,19 @@ label {
 .mainInfo__info__category__point > span {
   color: rgb(200, 200, 200);
   margin-right: 5px;
+}
+.mainInfo__info__category_shadowAll {
+  border-right-color: rgba(255, 255, 255, 0.5);
+  border-left-color: rgba(255, 255, 255, 0.5);
+  box-shadow: inset 10px 0px 10px -10px rgb(0, 0, 0), inset -10px 0px 10px -10px rgb(0, 0, 0);
+}
+.mainInfo__info__category_shadowLeft {
+  border-right-color: rgba(255, 255, 255, 0.5);
+  box-shadow: inset -10px 0px 10px -10px rgb(0, 0, 0);
+}
+.mainInfo__info__category_shadowRight {
+  border-left-color: rgba(255, 255, 255, 0.5);
+  box-shadow: inset 10px 0px 10px -10px rgb(0, 0, 0);
 }
 .mainInfo__info__about {
   margin-top: 10px;
@@ -6176,8 +6147,6 @@ label {
 }
 .authors__grid__author__logo > img {
   height: 100%;
-  border-radius: 20px;
-  box-shadow: 0 0 30px -10px rgba(0, 0, 0, 0.2);
   transition: 0.2s;
 }
 .authors__grid__author__info {
@@ -6201,15 +6170,6 @@ label {
 .authors__grid__author__info__count {
   min-width: -moz-max-content;
   min-width: max-content;
-}
-.authors__grid__author:hover .authors__grid__author__logo {
-  box-shadow: inset 0 0 0 2px rgb(1, 162, 255);
-}
-.authors__grid__author:hover .authors__grid__author__logo > img {
-  transform: scale(1.1);
-}
-.authors__grid__author:hover .authors__grid__author__info {
-  background-color: rgb(1, 162, 255);
 }
 
 .series__head {
