--- a/scss/elements/authors/_authors.scss
+++ b/scss/elements/authors/_authors.scss
@@ -33,10 +33,7 @@
                 flex-grow: 1;
                 & > img {
                     height: 100%;
-                    border-radius: 20px;
-                    box-shadow: 0 0 30px -10px rgba(0, 0, 0, .2);
                     transition: .2s;
-                    // border: 1px solid rgba(255, 255, 255, .2);
                 }
             }
             &__info {
@@ -60,17 +57,17 @@
                     min-width: max-content;
                 }
             }
-            &:hover &{
-                &__logo {
-                    box-shadow: inset 0 0 0 2px base.$clr-blue_light;
-                    & > img {
-                        transform: scale(1.1);
-                    }
-                }
-                &__info {
-                    background-color: base.$clr-blue_light;
-                }
-            }
+            // &:hover &{
+            //     &__logo {
+            //         box-shadow: inset 0 0 0 2px base.$clr-blue_light;
+            //         & > img {
+            //             transform: scale(1.1);
+            //         }
+            //     }
+            //     &__info {
+            //         background-color: base.$clr-blue_light;
+            //     }
+            // }
         }
     }
 }
