--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -170,6 +170,27 @@
         justify-content: end;
         gap: 10px;
         margin-right: 5px;
+        &__region {
+            display: flex;
+            flex-direction: column;
+            align-items: end;
+            justify-content: center;
+            line-height: 18px;
+            font-size: 16px;
+            font-weight: 700;
+            & > span {
+                font-size: 14px;
+                font-weight: 400;
+                color: rgb(180, 180, 180);
+            }
+            // height: 45px;
+            // width: 45px;
+            // border-radius: 50%;
+            // transition: 0.15s;
+            // position: relative;
+            // cursor: pointer;
+            // @include base.style-main_click;
+        }
         &__button {
             height: 45px;
             width: 45px;
