--- a/scss/elements/author/_author.scss
+++ b/scss/elements/author/_author.scss
@@ -21,10 +21,17 @@
                     padding-right: 30px;
                     margin-right: 30px;
                     border-right: 1px solid rgba(255, 255, 255, .3);
-                    & > img {
-                        max-height: 100%;
-                        max-width: 100%;
-                        border-radius: 20px;
+                    &__imgBlock {
+                        height: 150px;
+                        width: 150px;
+                        overflow: hidden;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        & > img {
+                            height: 100%;
+                            border-radius: 20px;
+                        }
                     }
                 }   
                 &__title {
