--- a/scss/elements/basket/_basketContainer.scss
+++ b/scss/elements/basket/_basketContainer.scss
@@ -688,11 +688,12 @@
                     }
                 }
                 &_notification {
-                    padding: 8px;
-                    margin-bottom: -16px;
+                    // padding: 8px;
+                    margin-bottom: 0px;
                     border-radius: 7px;
-                    border: 3px solid rgb(134, 58, 58);
-                    transform: scale(1.05);
+                    // border: 3px solid rgb(134, 58, 58);
+                    box-shadow: 0 0 0 3px rgb(134, 58, 58);
+                    // transform: scale(1.05);
                 }
             }
             &__basketBlock {
