--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,10 @@
 @use "elements/blackoutBlock";
 @use "elements/gameV";
 @use "elements/gameH";
+@use "elements/seriesCard";
 @use "elements/switch";
+@use "elements/heading";
+@use "elements/griding";
 @use "elements/blockButtonMore";
 @use "elements/inputList";
 @use "elements/topImgParalaxBlock";
